comeco projeto restaurante

--- a/restaurante-base/.vscode/settings.json
+++ b/restaurante-base/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "java.dependency.packagePresentation": "hierarchical"
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
